# hamcws

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yaml  test.yaml
hamcws/: hamcws.py
tests/: test_domain.py  test_hamcws.py
