[project]
name = "hamcws"
version = "0.2.8"
description = "homeassistant friendly wrapper for J River MCWS"
authors = [
    { name = "3ll3d00d", email = "mattkhan+hamcws@gmail.com" }
]
license = "MIT"
readme = "README.md"
homepage = "http://github.com/3ll3d00d/hamcws"
repository = "http://github.com/3ll3d00d/hamcws"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp >=3.9.1, <4.0.0"
]
[tool.poetry]
include = [
    "LICENSE",
]
packages = [
    { include = "hamcws" }
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-aiohttp = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
